# ndsrecomp

./: .gitignore  .mcp.json  CLAUDE.md  DEBUG.md  HLE_ARCHITECTURE.md  ISSUES.md  LICENSE  PLAN.md  PRINCIPLES.md  README.md  RELEASE_NOTES.md  TCP.md  THIRD_PARTY_ATTRIBUTION.md
bios/: README.md  biosnds7.toml  biosnds9.toml
bios/firmware_banks/: fw_arm7_calibration_save.toml  fw_arm7_date_alarm_save.toml  fw_arm7_download_play_shutdown.toml  fw_arm7_early.toml  fw_arm7_intermediate.toml  fw_arm7_irq_ready.toml  fw_arm7_main_menu_controls.toml  fw_arm7_menu.toml  fw_arm7_pictochat_room_a.toml  fw_arm7_profile_save.toml  fw_arm7_shared_ready.toml  fw_arm7_shutdown.toml  fw_arm7_system_options_save.toml  fw_arm9_calibration_save.toml  fw_arm9_date_alarm_save.toml  fw_arm9_download_play_shutdown.toml  fw_arm9_early.toml  fw_arm9_main_menu_controls.toml  fw_arm9_menu.toml  fw_arm9_pictochat_room_a.toml  fw_arm9_profile_save.toml  fw_arm9_shutdown.toml  fw_arm9_system_options_save.toml
cmake/: NdsCompilerCache.cmake  NdsJobPools.cmake
docs/: BUILD_PERFORMANCE.md  accuracy_burndown.md  bios_analysis.md  dispatch_architecture.md  firmware_boot.md  firmware_release_evidence.json  oracle_bringup.md  phase1_audit.md  references.md  runner_bringup.md  scheduler_design.md
ghidra/: README.md  export_functions.py  import_bios.sh
oracle/: README.md  _arm7pc_sweep.py  _ceiling_probe.py  _client.py  _determinism_probe.py  _swi_probe.py  _timing_probe.py  cmp_itcm.py  diff_frame.py  diff_mem.py  find_first_diverge.py  firmware_traversal.json  firmware_traversal.py  first_diverge_frames.py  fp_diverge.py  game_boot_smoke.py  game_cycle_bisect.py  game_fp_bisect.py  game_fp_probe.py  game_fp_source.py  game_ipc_timing.py  game_post_ipc_bisect.py  game_secure_area.py  game_wait_timing.py  probe_boot_speed.py  probe_gx_state.py  probe_sb_value.py  probe_soundbias.py  probe_soundbias_invariant.py  probe_spi_rtc.py  probe_stall.py  probe_swi.py  probe_tier3.py  recon_state.py  setup-melonds.sh  snapshot.py  test_reset.py  trace_native_56.py  trace_oracle_sb.py
oracle/patches/: 0001-nds-setirq-oracle-hook.patch  0002-nds-iowrite-oracle-hook.patch  0003-nds-runframe-oracle-break.patch  0004-nds-insn-retire-hook.patch  0005-nds-memwrite-oracle-hook.patch  README.md
oracle/shim/: CMakeLists.txt  README.md  nds_oracle.cpp  oracle_hooks.h  platform_oracle.cpp
recompiler/: CMakeLists.txt
recompiler/armv4t/: arm_codegen.cpp  arm_codegen.h  arm_decode.cpp  arm_decode.h  arm_ir.cpp  arm_ir.h  bus.h  condition_codes.h  cpu_state.h  interpreter.cpp  interpreter.h  pipeline_semantics.h  runtime_arm.cpp  runtime_arm.h  symbol_lookup.cpp  symbol_lookup.h  thumb_decode.cpp  thumb_decode.h
recompiler/finder/: config.cpp  config.h  function_finder.cpp  function_finder.h
recompiler/src/: main.cpp
recompiler/support/: sha1.cpp  sha1.h
recompiler/tests/: armv5te_decode_test.cpp  hle_manifest_test.cpp  interpreter_cycle_test.cpp
runner/: CMakeLists.txt
runner/src/: bus.cpp  cp15.cpp  debug_server.cpp  debug_server.h  frontend.cpp  frontend.h  gpu2d.cpp  gpu2d.h  gpu3d.cpp  gpu3d.h  hle_profile.h  io.cpp  io.h  main.cpp  mem_timing_profile.h  profile_report.cpp  profile_report.h  runtime_arm.cpp  scheduler.cpp  scheduler.h  spu.cpp  spu.h  state.h  tier3.cpp  tier3.h  vram.cpp  vram.h  wifi.cpp  wifi.h
runner/src/melonds_compute/: ComputeHost.cpp  ComputeHost.h  GPU_OpenGL.cpp  GPU_OpenGL.h  PlatformCompute.cpp  PlatformCompute.h
tools/: capture_firmware_images.py  export_firmware_bank_configs.py  fw_inspect.py  import_bios_symbols.py  verify_firmware_release.py
